# roger

./: .env  .gitignore  .gitmodules  .pylintrc  Dockerfile  Jenkinsfile  Makefile  Merge-Dug-Architecture.md  annotate.py  cli.py  dag_util.py  dbgap_dag.py  docker-compose.yaml  index_dag.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tranql_translate.py
.github/workflows/: build-push-dev-image.yml  build-push-release.yml  code-checks.yml  trivy-pr-scan.yml
Merge-helm/: deploy-ready-steps.md
Merge-helm/dev-deployment/: api-service.yaml  configmap.yaml  dug-dev-deployment.yaml  elastic-dev-deployment.yaml  pvc.yaml  redis-dev-deployment.yaml  secrets.yaml  services.yaml  tranql-configmap.yaml  tranql-dev-deployment.yaml
Merge-helm/prod-deployment/: Chart.yaml  helx-prod-search.yaml  values.yaml
dags/: _version.py  annotate.py  annotate_and_index.py  annotate_simple.py  heal_sparc_dag.py  index_dag.py  knowledge_graph_build.py  metadata.yaml  test_dag.py  tranql_translate.py
dags/dug_helpers/: dug_utils.py
dags/roger/: Config.py  config.yaml  core.py  metadata.yaml  roger_db.py  tasks.py
dags/utils/: s3.py  s3_utils.py
dug_helpers/: dug_utils.py
helm/: Chart.yaml  Readme.md  values.yaml
helm/templates/: roger-pvc.yaml
roger/: Config.py  config.yaml  core.py  metadata.yaml
roger/test/: generate_kgx_files.py
src/roger/: cli.py  tasks.py
tests/: conftest.py  test_redis_query.cypher
tests/integration/: conftest.py  test_config.py  test_dug_utils.py
tests/unit/: test_input_config.py  test_paths.py  test_storage.py  test_tasks.py
(+51 files in other folders)
