[metadata]
name = roger
version = 0.10.4
author = Renaissance Computing Institute + RTI
description = Data pipeline automation for dug
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helxplatform/roger
project_urls =
    Bug Tracker = https://github.com/helxplatform/roger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = true
install_requires =
    dug
    orjson
    requests
    requests_cache
    redis

[options.entry_points]
console_scripts =
    dug = dug.cli:main
    roger = roger.cli:main

[options.extras_require]
rest =
     jsonschema
     apache-airflow

[options.packages.find]
where = src
